--- a/web/WEB-INF/jspf/menu.jspf
+++ b/web/WEB-INF/jspf/menu.jspf
@@ -1,5 +1,6 @@
 <%-- any content can be specified here e.g.: --%>
 <%@ page pageEncoding="UTF-8" %>
-<h2>Hello World!</h2>
-<a href="form.jps">Home</a>
+<h2>Menu</h2>
+<a href="form.jps">Home</a>||
+<a href="amortizacao-americana.jps">Amortização Americana</a>||
 <hr/>
